feat: dockerización y actualización de documentación.